fixing check marks on ie11

--- a/resources/sass/partials/_lists.scss
+++ b/resources/sass/partials/_lists.scss
@@ -23,6 +23,8 @@ ul {
                 content: url("/img/check.svg");
                 height: 20px;
                 width: 20px;
+                max-width: 20px;
+                max-height: 20px;
                 padding: 3px 10px 0 0;
             }
         }
